# forgeclaw

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  HLD.md  LICENSE-APACHE  LICENSE-MIT  MOTIVATIONS.md  ROADMAP.md  clippy.toml  deny.toml  justfile  lefthook.yml
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/agent-runner/: Cargo.toml
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/channels/: Cargo.toml
crates/channels/src/: lib.rs
crates/container/: Cargo.toml
crates/container/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  id.rs  lib.rs
crates/core/src/command/: mod.rs  tests.rs  types.rs
crates/core/src/config/: merge.rs  mod.rs  tests.rs  tests_env.rs  tests_validation.rs  types.rs
crates/core/src/config/snapshots/: forgeclaw_core__config__tests__snapshot_example_config.snap
crates/core/src/event/: bus.rs  mod.rs  types.rs
crates/core/src/id/: mod.rs  tests.rs
crates/core/src/snapshots/: forgeclaw_core__config__tests__snapshot_example_config.snap
crates/forgeclaw/: Cargo.toml
crates/health/: Cargo.toml
crates/health/src/: lib.rs
crates/ipc/: Cargo.toml
crates/ipc/benches/: README.md  buffer_retention.rs  decode.rs
crates/ipc/examples/: gen_schemas.rs
crates/ipc/fixtures/: command.json  command_cancel_task.json  command_dispatch_self_improvement.json  command_dispatch_tanren.json  command_pause_task.json  command_register_group.json  command_schedule_task.json  error.json  heartbeat.json  init.json  messages.json  output_complete.json  output_complete_null.json  output_delta.json  progress.json  ready.json  shutdown.json
crates/ipc/schemas/: container_to_host.schema.json  host_to_container.schema.json
crates/ipc/src/: client.rs  codec.rs  codec_tests.rs  codec_type_probe.rs  error.rs  error_tests.rs  forward_compat.rs  lib.rs  lifecycle.rs  outbound_validation.rs  path_policy.rs  peer_cred.rs  policy.rs  recv_policy.rs  semantics.rs  server.rs  transport.rs  transport_tests.rs  util.rs  version.rs
crates/ipc/src/client/: mod.rs  path_validation.rs  pending.rs  protocol.rs  transport_core.rs
crates/ipc/src/message/: authorized.rs  collections.rs  command.rs  command_tests.rs  container_to_host.rs  host_to_container.rs  limits.rs  mod.rs  shared.rs
crates/ipc/src/message/command/: extensions.rs  mod.rs
crates/ipc/src/message/semantic/: bounded_text.rs  mod.rs  time.rs  url.rs
crates/ipc/src/peer_cred/: bind_attestation.rs  mod.rs  socket_dir.rs
crates/ipc/src/server/: auth.rs  connection_split.rs  listener.rs  listener_tests.rs  mod.rs  peer_credential_policy.rs  pending.rs  protocol.rs  protocol_logging.rs  protocol_logging_tests.rs  protocol_tests.rs  transport_core.rs
crates/ipc/src/util/: mod.rs  sampler.rs
crates/ipc/tests/: client_adversarial.rs  client_lifecycle.rs  client_path_validation.rs  client_unknown_traffic_controls.rs  codec_roundtrip.rs  command_interleaving.rs  domain_type_schema_parity.rs  handshake_lifecycle.rs  handshake_protocol_version_malformed.rs  idle_heartbeat.rs  idle_liveness.rs  job_correlation.rs  lifecycle_enforcement.rs  malformed_frames.rs  outbound_oversize.rs  ownership_pending.rs  perf_regression.rs  protocol_constraints_contract.rs  schema_export.rs  schema_generation.rs  schema_validation.rs  security_hardening.rs  security_unauthorized_abuse.rs  security_versioning.rs  server_adversarial.rs  socket_hardening.rs  socket_owner_policy.rs  spec_fixtures.rs  split_lifecycle.rs  timeout_liveness.rs  unknown_abuse_hardening.rs  versioning_e2e.rs  write_timeouts.rs
crates/ipc/tests/common/: mod.rs
crates/ipc/tests/snapshots/: schema_generation__container_to_host_schema.snap  schema_generation__host_to_container_schema.snap
crates/providers/: Cargo.toml
crates/providers/src/: lib.rs
crates/queue/: Cargo.toml
crates/queue/src/: lib.rs
crates/router/: Cargo.toml
crates/router/src/: lib.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs
crates/store/: Cargo.toml
crates/store/src/: error.rs  ids.rs  lib.rs  schema_check.rs  store.rs
crates/store/src/entities/: events.rs  groups.rs  messages.rs  mod.rs  sessions.rs  state.rs  tasks.rs
crates/store/src/migrations/: m20260411_000001_init.rs  mod.rs
crates/store/src/ops/: events.rs  groups.rs  messages.rs  mod.rs  sessions.rs  state.rs  tasks.rs
crates/store/src/types/: event.rs  group.rs  message.rs  mod.rs  task.rs
crates/store/tests/: cursor_pagination.rs  migration_restart.rs  migrations.rs  postgres_parity.rs  round_trip.rs  schema_drift.rs
crates/store/tests/common/: mod.rs
crates/tanren/: Cargo.toml
crates/tanren/src/: lib.rs
docs/: CONTAINER_SYSTEM.md  CRATE_GUIDE.md  DESIGN_PRINCIPLES.md  IPC_PROTOCOL.md  PROVIDER_SYSTEM.md  TANREN_INTEGRATION.md
docs/briefs/: lane-0.4-auditor.md  lane-0.4-doer.md
examples/: forgeclaw.example.toml
