[package]
name = "forgeclaw-agent-runner"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Container-side IPC client and agent adapter framework"

[[bin]]
name = "forgeclaw-agent-runner"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
# Added as crate develops

[dev-dependencies]
