[package]
name = "forgeclaw-auth"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Multi-provider credential proxy, circuit breaker, rate limiting, token management"

[lints]
workspace = true

[dependencies]
# Added as crate develops

[dev-dependencies]
