[package]
name = "forgeclaw-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Shared types, event bus, error taxonomy, and configuration"

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
