[package]
name = "forgeclaw-health"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Health source trait, Prometheus metrics, status server, compose healthcheck"

[lints]
workspace = true

[dependencies]
# Added as crate develops

[dev-dependencies]
