[package]
name = "forgeclaw-ipc"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Structured IPC protocol over Unix domain sockets"

[lints]
workspace = true

[features]
json-schema = ["schemars", "forgeclaw-core/json-schema"]

[dependencies]
forgeclaw-core = { path = "../core", version = "0.1" }
tokio.workspace = true
tokio-util.workspace = true
bytes.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Optional — only needed for JSON Schema generation
schemars = { workspace = true, optional = true }

[dev-dependencies]
forgeclaw-ipc = { path = ".", features = ["json-schema"] }
insta.workspace = true
jsonschema.workspace = true
proptest.workspace = true
schemars.workspace = true
tempfile.workspace = true
