[package]
name = "forgeclaw-providers"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Multi-model provider abstraction with token budgets and fallback chains"

[lints]
workspace = true

[dependencies]
# Added as crate develops

[dev-dependencies]
