[package]
name = "forgeclaw-queue"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Group concurrency control, warm container pool, backpressure, retry"

[lints]
workspace = true

[dependencies]
# Added as crate develops

[dev-dependencies]
