[package]
name = "forgeclaw-scheduler"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Task scheduling: cron, interval, once. Task lifecycle management"

[lints]
workspace = true

[dependencies]
# Added as crate develops

[dev-dependencies]
