[package]
name = "forgeclaw-store"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Database layer with compile-time checked queries (SQLite + Postgres)"

[lints]
workspace = true

[dependencies]
# Added as crate develops

[dev-dependencies]
